--- a/src/clock/clock.html
+++ b/src/clock/clock.html
@@ -34,6 +34,8 @@
     </div>
   </body>
 </html>
+<!-- 常量的引入 -->
+<script src="../common/constant.js"></script>
 <script src="../common/canvas.js"></script>
 <script src="./clock.js"></script>
 <script>
